# scrape

./: .env.tmpl  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  makefile  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: deploy.yml
src/scraping_service/: __init__.py  app.py
src/scraping_service/helpers/: driver.py  error_handling.py  lifespan.py  schemas.py
src/tests/: test_driver.py
src/tests/test_data/: rickroll.html  search_AI.html  search_Docker.html  search_Kubernetes.html  search_ML.html  search_Python.html  search_Rust.html
